--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,8 @@ python:
 
 
 install:
-  - pip install gemprospector[interactive,documentation]
+  - pip install -r requirements.txt
+  - pip install .
 
 
 script:
