github pages setup

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,3 +21,11 @@ jobs:
       script:
         - nbsite generate-rst --org SystemsGenetics --project-name GemProspector
         - nbsite build --what=html --output=builtdocs
+      deploy:
+        - provider: pages
+          skip_cleanup: true
+          local_dir: ./builtdocs
+          target_branch: gh-pages
+          github_token: $GITHUB_TOKEN
+          on:
+            branch: master
