--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ jobs:
 
     - stage: build_docs
       script:
-        - nbsite generate-rst --org SystemsGenetics --project-name GemProspector
+        - nbsite generate-rst --org SystemsGenetics --project-name GEMprospector
         - nbsite build --what=html --output=builtdocs
       deploy:
         - provider: pages
