--- a/.travis.yml
+++ b/.travis.yml
@@ -26,12 +26,16 @@ before_script:
 
 jobs:
   include:
+    - stage: build_docker_notebook
+      script:
+        - "docker build -t systemsgenetics/gemprospector_interactive:latest ."
+
     - stage: run_notebooks
       script:
         - pytest --nbsmoke-run examples/*.ipynb
 
     - stage: build_docs
-      script:
+      script:"
         - nbsite generate-rst --org SystemsGenetics --project-name GEMprospector
         - nbsite build --what=html --output=builtdocs
       deploy:
