removed some (hopefully) not needed addons

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,12 @@ language: python
 services:
   - docker
 
-addons:
-  apt:
-    packages:
-      - libhdf5-serial-dev
-      - netcdf-bin
-      - libnetcdf-dev
+#addons:
+#  apt:
+#    packages:
+#      - libhdf5-serial-dev
+#      - netcdf-bin
+#      - libnetcdf-dev
 
 
 python:
