--- a/.travis.yml
+++ b/.travis.yml
@@ -20,22 +20,24 @@ install:
   - pip install -r doc/requirements.txt
   - pip install .
 
-before_script:
-  - mkdir ~/data
-  - "curl -X 'GET' \"https://files.osf.io/v1/resources/rbhfz/providers/osfstorage/5da74c9a26eb50000d827679?action=download&amp;version=1&amp;direct\" -H \"Authorization: Bearer ${OSF_TOKEN}\" --output ~/data/osativa.nc"
 
 jobs:
   include:
     - stage: build_docker_notebook
+      install: skip
       script:
         - docker build -t systemsgenetics/gemprospector_interactive:latest .
 
     - stage: run_notebooks
       script:
+        - mkdir ~/data
+        - "curl -X 'GET' \"https://files.osf.io/v1/resources/rbhfz/providers/osfstorage/5da74c9a26eb50000d827679?action=download&amp;version=1&amp;direct\" -H \"Authorization: Bearer ${OSF_TOKEN}\" --output ~/data/osativa.nc"
         - pytest --nbsmoke-run examples/*.ipynb
 
     - stage: build_docs
       script:
+        - mkdir ~/data
+        - "curl -X 'GET' \"https://files.osf.io/v1/resources/rbhfz/providers/osfstorage/5da74c9a26eb50000d827679?action=download&amp;version=1&amp;direct\" -H \"Authorization: Bearer ${OSF_TOKEN}\" --output ~/data/osativa.nc"
         - nbsite generate-rst --org SystemsGenetics --project-name GEMprospector
         - nbsite build --what=html --output=builtdocs
       deploy:
