--- a/workflows/Dockerfile
+++ b/workflows/Dockerfile
@@ -1,4 +1,5 @@
 FROM python:3.6
 
-RUN git clone git@github.com:SystemsGenetics/GEMprospector.git /opt/gemprospector \
-    && pip install /opt/gemprospector
+RUN mkdir /opt/gemprospector
+COPY . /opt/gemprospector/
+RUN pip install /opt/gemprospector
