--- a/workflows/boruta_multiclass/nextflow.config
+++ b/workflows/boruta_multiclass/nextflow.config
@@ -11,7 +11,7 @@ params.ranking_model_opts.n_jobs = [-1]
 
 // BorutaPy options.
 params.boruta_opts.perc = [100]
-params.boruta_opts.max_iter = [2]
+params.boruta_opts.max_iter = [1000]
 
 
 // How often to repeat each set of arguments.
@@ -23,7 +23,11 @@ params.out_dir = "${PWD}/output"
 
 
 profiles {
-  standard {
-    executor.queueSize = 1
-  }
+  standard { executor.queueSize = 1 }
+  docker { docker.enabled = true
+           process.container = 'systemsgenetics/gemprospector_workflow:latest' }
+  singularity { singularity.enabled = true
+                singularity.autoMounts = true
+                process.container = 'systemsgenetics/gemprospector_workflow:latest'}
+  test { includeConfig 'conf/test.config' }
 }
