--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,11 @@
+branches:
+  only:
+  - master
+
 language: python
 
 services:
   - docker
-
-#addons:
-#  apt:
-#    packages:
-#      - libhdf5-serial-dev
-#      - netcdf-bin
-#      - libnetcdf-dev
-
 
 python:
   - "3.7"
