--- a/workflows/Dockerfile
+++ b/workflows/Dockerfile
@@ -2,4 +2,4 @@ FROM python:3.6
 
 RUN mkdir /opt/gemprospector
 COPY . /opt/gemprospector/
-RUN pip install /opt/gemprospector
+RUN pip install /opt/gemprospector --no-dependencies
