--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,10 @@ jobs:
         - docker push systemsgenetics/gemprospector_interactive:latest
         - docker push systemsgenetics/gemprospector_workflow:latest
 
+    - stage: stage demo data
+      script: "curl -X 'GET' \"https://files.osf.io/v1/resources/rbhfz/providers/osfstorage/5da74c9a26eb50000d827679?action=download&amp;version=1&amp;direct\" -H \"Authorization: Bearer ${OSF_TOKEN}\" --output ~/data/osativa.nc"
+
+
     - stage: test_and_build_docs
       script:
         - mkdir ~/data
