updated dockerfile structure -- use docker compose

--- a/docker/notebook/Dockerfile
+++ b/docker/notebook/Dockerfile
@@ -4,4 +4,4 @@ RUN mkdir /opt/gemprospector
 COPY . /opt/gemprospector/
 RUN pip install /opt/gemprospector/
 
-COPY examples/ examples/
+COPY ./examples examples/
