--- a/workflows/boruta_multiclass/nextflow.config
+++ b/workflows/boruta_multiclass/nextflow.config
@@ -29,5 +29,5 @@ profiles {
   singularity { singularity.enabled = true
                 singularity.autoMounts = true
                 process.container = 'systemsgenetics/gemprospector_workflow:latest'}
-  test { includeConfig 'conf/test.config' }
+  test { includeConfig 'test.config' }
 }
