--- a/.travis.yml
+++ b/.travis.yml
@@ -26,8 +26,7 @@ jobs:
     - stage: build_dockerfiles
       install: skip
       script:
-        - docker build -t systemsgenetics/gemprospector_interactive:latest .
-        - docker build -t systemsgenetics/gemprospector_workflow:latest workflows/
+        - docker-compose build
         - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
         - docker push systemsgenetics/gemprospector_interactive:latest
         - docker push systemsgenetics/gemprospector_workflow:latest
