fixed typo in text.config

--- a/workflows/boruta_multiclass/test.config
+++ b/workflows/boruta_multiclass/test.config
@@ -1,5 +1,5 @@
 // Data input and selection.
-params.gem_netcdf = "~/GEMprospector_demo_data/ostaiva.nc"
+params.gem_netcdf = '/home/tyler/GEMprospector_demo_data/osativa.nc'
 params.x_label = "counts"
 params.y_label = ["Treatment"]
 
