added conda profile

--- a/workflows/boruta_multiclass/nextflow.config
+++ b/workflows/boruta_multiclass/nextflow.config
@@ -24,6 +24,7 @@ params.out_dir = "${PWD}/output"
 
 profiles {
   standard { executor.queueSize = 1 }
+  conda { process.conda = "${projectDir}/environment.yml""
   docker { docker.enabled = true
            process.container = 'systemsgenetics/gemprospector_workflow:latest' }
   singularity { singularity.enabled = true
