--- a/.travis.yml
+++ b/.travis.yml
@@ -33,11 +33,14 @@ jobs:
 
     - stage: test_and_build_docs
       script:
-        - mkdir ~/data
+        - mkdir ~/GEMprospector_demo_data/lineaments
         - "curl -X 'GET' \"https://files.osf.io/v1/resources/rbhfz/providers/osfstorage/5db1eba3365cb8000dd9d251\" -H \"Authorization: Bearer ${OSF_TOKEN}\" --output ~/GEMprospector_demo_data/rice_heat_drought.GEM.raw.txt"
         - "curl -X 'GET' \"https://files.osf.io/v1/resources/rbhfz/providers/osfstorage/5db1ebb6365cb8000ad9194e\" -H \"Authorization: Bearer ${OSF_TOKEN}\" --output ~/GEMprospector_demo_data/srx_sample_annots.txt"
         - "curl -X 'GET' \"https://files.osf.io/v1/resources/rbhfz/providers/osfstorage/5db1ebd0365cb8000dd9d28d\" -H \"Authorization: Bearer ${OSF_TOKEN}\" --output ~/GEMprospector_demo_data/all.gff"
         - "curl -X 'GET' \"https://files.osf.io/v1/resources/rbhfz/providers/osfstorage/5db1f74f0db187000c3ab77d\" -H \"Authorization: Bearer ${OSF_TOKEN}\" --output ~/GEMprospector_demo_data/osativa.nc"
+        - "curl -X 'GET' \"https://files.osf.io/v1/resources/rbhfz/providers/osfstorage/5db37d30af84c3000ee17d09\" -H \"Authorization: Bearer ${OSF_TOKEN}\" --output ~/GEMprospector_demo_data/lineaments/Genotype.nc"
+        - "curl -X 'GET' \"https://files.osf.io/v1/resources/rbhfz/providers/osfstorage/5db37d30f3bb87000d82888a\" -H \"Authorization: Bearer ${OSF_TOKEN}\" --output ~/GEMprospector_demo_data/lineaments/Subpsecies.nc"
+        - "curl -X 'GET' \"https://files.osf.io/v1/resources/rbhfz/providers/osfstorage/5db37d2ecfc96c000ebb6b20\" -H \"Authorization: Bearer ${OSF_TOKEN}\" --output ~/GEMprospector_demo_data/lineaments/Treatment.nc"
         - pytest --nbsmoke-run examples/*.ipynb
         - nbsite generate-rst --org SystemsGenetics --project-name GEMprospector
         - nbsite build --what=html --output=builtdocs
