updated travis files. update_osf 2

--- a/.travis.yml
+++ b/.travis.yml
@@ -42,7 +42,8 @@ install:
 jobs:
   include:
 
-    - stage: test_and_build_docs
+    - stage: Update OSF files
+      install: skip
       script:
         - "curl -X 'GET' \"https://files.osf.io/v1/resources/rbhfz/providers/osfstorage/5db1eba3365cb8000dd9d251?action=download&amp;version=1&amp;direct\" -H \"Authorization: Bearer ${OSF_TOKEN}\" --output ${GEMPROSPECTOR_DATA}/rice_heat_drought.GEM.raw.txt"
         - "curl -X 'GET' \"https://files.osf.io/v1/resources/rbhfz/providers/osfstorage/5db1ebb6365cb8000ad9194e?action=download&amp;version=1&amp;direct\" -H \"Authorization: Bearer ${OSF_TOKEN}\" --output ${GEMPROSPECTOR_DATA}/srx_sample_annots.txt"
