renamed project and repo to GSForge

--- a/.travis.yml
+++ b/.travis.yml
@@ -74,8 +74,8 @@ jobs:
     - stage: test_and_build_docs
       script:
         - pytest --nbsmoke-run examples/*.ipynb
-        - nbsite_generate_modules.py GEMprospector -d ./doc/Reference_Manual -n GEMprospector
-        - nbsite generate-rst --org SystemsGenetics --project-name GEMprospector
+        - nbsite_generate_modules.py GSForge -d ./doc/Reference_Manual -n GSForge
+        - nbsite generate-rst --org SystemsGenetics --project-name GSForge
         - nbsite build --what=html --output=builtdocs
       deploy:
         - provider: pages
