added renamed files.

--- a/docker/notebook/Dockerfile
+++ b/docker/notebook/Dockerfile
@@ -1,7 +1,7 @@
 FROM jupyter/datascience-notebook:latest
 
-RUN mkdir /opt/gemprospector
-COPY . /opt/gemprospector/
-RUN pip install /opt/gemprospector/
+RUN mkdir /opt/gsforge
+COPY . /opt/gsforge/
+RUN pip install /opt/gsforge/
 
 COPY ./examples examples/
