--- a/docker/workflow/Dockerfile
+++ b/docker/workflow/Dockerfile
@@ -1,5 +1,5 @@
 FROM python:3.6
 
-RUN mkdir /opt/gemprospector
-COPY . /opt/gemprospector/
-RUN pip install /opt/gemprospector/
+RUN mkdir /opt/gsforge
+COPY . /opt/gsforge/
+RUN pip install /opt/gsforge/
