--- a/setup.cfg
+++ b/setup.cfg
@@ -3,5 +3,4 @@
 nbsmoke_cell_timeout = 600
 
 # notebooks to skip running; one case insensitive re to match per line
-nbsmoke_skip_run = ^.*skipme\.ipynb$
-                   ^.*skipmetoo.*$
+nbsmoke_skip_run = Creating_an_AnnotatedGEM.ipynb
