--- a/.travis.yml
+++ b/.travis.yml
@@ -33,8 +33,8 @@ python:
 
 
 stages:
-  - name: Update OSF files
-    if: commit_message =~ \bupdate_osf\b
+#  - name: Update OSF files
+#    if: commit_message =~ \bupdate_osf\b
   - build_dockerfiles
   - test_and_build_docs
 
@@ -43,15 +43,16 @@ install:
   - pip install -r requirements.txt
   - pip install -r doc/requirements.txt
   - pip install .
-
+  - pip install osfclient
+  - osf -p 6ceuk clone ${GSFORGE_DEMO_DATA}
 
 jobs:
   include:
-    - stage: Update OSF files
-      install: skip
-      script:
-        - pip install osfclient
-        - osf -p 6ceuk clone ${GSFORGE_DEMO_DATA}
+#    - stage: Update OSF files
+#      install: skip
+#      script:
+#        - pip install osfclient
+#        - osf -p 6ceuk clone ${GSFORGE_DEMO_DATA}
 
     - stage: build_dockerfiles
       install: skip
