--- a/.travis.yml
+++ b/.travis.yml
@@ -44,7 +44,7 @@ install:
   - pip install -r doc/requirements.txt
   - pip install .
   - pip install osfclient
-  - osf -p 6ceuk clone ${GSFORGE_DEMO_DATA}
+  - osf -p 6ceuk clone "$GSFORGE_DEMO_DATA"
 
 jobs:
   include:
