--- a/.travis.yml
+++ b/.travis.yml
@@ -18,9 +18,9 @@ env:
   - GSFORGE_DEMO_DATA="${HOME}/GSForge_demo_data"
 
 
-cache:
-  directories:
-    - "$GSFORGE_DEMO_DATA"
+#cache:
+#  directories:
+#    - "$GSFORGE_DEMO_DATA"
 #    - "$GSFORGE_DEMO_DATA/boruta_gene_sets/"
 
 language: python
@@ -35,7 +35,7 @@ python:
 stages:
 #  - name: Update OSF files
 #    if: commit_message =~ \bupdate_osf\b
-  - build_dockerfiles
+#  - build_dockerfiles
   - test_and_build_docs
 
 
@@ -44,7 +44,6 @@ install:
   - pip install -r doc/requirements.txt
   - pip install .
   - pip install osfclient
-  - osf -p 6ceuk clone "$GSFORGE_DEMO_DATA"
 
 jobs:
   include:
@@ -54,17 +53,18 @@ jobs:
 #        - pip install osfclient
 #        - osf -p 6ceuk clone ${GSFORGE_DEMO_DATA}
 
-    - stage: build_dockerfiles
-      install: skip
-      script:
-        - docker-compose build
-        - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-        - docker push systemsgenetics/gsforge_interactive:latest
-        - docker push systemsgenetics/gsforge_workflow:latest
+#    - stage: build_dockerfiles
+#      install: skip
+#      script:
+#        - docker-compose build
+#        - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+#        - docker push systemsgenetics/gsforge_interactive:latest
+#        - docker push systemsgenetics/gsforge_workflow:latest
 
     - stage: test_and_build_docs
       script:
-        - pytest --nbsmoke-run examples/*.ipynb
+        - osf -p 6ceuk clone "$GSFORGE_DEMO_DATA"
+#        - pytest --nbsmoke-run examples/*.ipynb
         - nbsite_generate_modules.py GSForge -d ./doc/Reference_Manual -n GSForge
         - nbsite generate-rst --org SystemsGenetics --project-name GSForge
         - nbsite build --what=html --output=builtdocs
