--- a/.travis.yml
+++ b/.travis.yml
@@ -66,15 +66,16 @@ jobs:
     - stage: test_and_build_docs
       script:
         - osf -p 6ceuk clone "$GSFORGE_DEMO_DATA"
+        - ls "$GSFORGE_DEMO_DATA"
 #        - pytest --nbsmoke-run examples/*.ipynb
-        - nbsite_generate_modules.py GSForge -d ./doc/Reference_Manual -n GSForge
-        - nbsite generate-rst --org SystemsGenetics --project-name GSForge
-        - nbsite build --what=html --output=builtdocs
-      deploy:
-        - provider: pages
-          skip_cleanup: true
-          local_dir: ./builtdocs
-          target_branch: gh-pages
-          github_token: $GITHUB_TOKEN
-          on:
-            branch: master
+#        - nbsite_generate_modules.py GSForge -d ./doc/Reference_Manual -n GSForge
+#        - nbsite generate-rst --org SystemsGenetics --project-name GSForge
+#        - nbsite build --what=html --output=builtdocs
+#      deploy:
+#        - provider: pages
+#          skip_cleanup: true
+#          local_dir: ./builtdocs
+#          target_branch: gh-pages
+#          github_token: $GITHUB_TOKEN
+#          on:
+#            branch: master
