--- a/setup.cfg
+++ b/setup.cfg
@@ -3,4 +3,6 @@
 nbsmoke_cell_timeout = 600
 
 # notebooks to skip running; one case insensitive re to match per line
-nbsmoke_skip_run = ^.*Creating_an_AnnotatedGEM.*$
+nbsmoke_skip_run = ^examples/dev/*
+                   ^examples/user_guide/AnnotatedGEM_from_NCBI_GEO.ipynb
+                   ^examples/user_guide/Creating_an_AnnotatedGEM.ipynb
