--- a/.travis.yml
+++ b/.travis.yml
@@ -46,7 +46,7 @@ jobs:
         - osf -p 6ceuk clone "$GSFORGE_DEMO_DATA"
         - pytest --nbsmoke-run examples/**/*.ipynb
         - nbsite_generate_modules.py GSForge -d ./doc/Reference_Manual -n GSForge
-        - nbsite generate-rst --org SystemsGenetics --project-name GSForge --skip AnnotatedGEM
+        - nbsite generate-rst --org SystemsGenetics --project-name GSForge --skip '*AnnotatedGEM*'
         - nbsite build --what=html --output=builtdocs
       deploy:
         - provider: pages
