--- a/workflows/boruta_multiclass/nextflow.config
+++ b/workflows/boruta_multiclass/nextflow.config
@@ -1,33 +1,33 @@
 // Data input and selection.
-params.gem_netcdf = ""
-params.x_label = "counts"
-params.y_label = []
+// params.gem_netcdf = ""
+// params.x_label = "counts"
+// params.y_label = []
 
 // Ranking model options.
-params.ranking_model = "RandomForestClassifier"
-params.ranking_model_opts.max_depth = [3]
-params.ranking_model_opts.n_jobs = [-1]
+// params.ranking_model = "RandomForestClassifier"
+// params.ranking_model_opts.max_depth = [3]
+// params.ranking_model_opts.n_jobs = [-1]
 
 
 // BorutaPy options.
-params.boruta_opts.perc = [100]
-params.boruta_opts.max_iter = [1000]
+// params.boruta_opts.perc = [100]
+// params.boruta_opts.max_iter = [1000]
 
 
 // How often to repeat each set of arguments.
-params.repeats = 1
+// params.repeats = 1
 
 
 // Output directory.
-params.out_dir = "${PWD}/output"
+// params.out_dir = "${PWD}/output"
 
 
 profiles {
   standard { executor.queueSize = 1 }
   docker { docker.enabled = true
-           process.container = 'systemsgenetics/gemprospector_workflow:latest' }
+           process.container = 'systemsgenetics/gsforge_workflow:latest' }
   singularity { singularity.enabled = true
                 singularity.autoMounts = true
-                process.container = 'systemsgenetics/gemprospector_workflow:latest'}
+                process.container = 'systemsgenetics/gsforge_workflow:latest'}
   test { includeConfig 'test.config' }
 }
