docs and docker fixes

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ python:
 
 stages:
   - build_dockerfiles
-#  - test_and_build_docs
+  - test_and_build_docs
 
 install:
   - sudo apt-get install graphviz
@@ -41,18 +41,18 @@ jobs:
         - docker push systemsgenetics/gsforge_interactive:latest
         - docker push systemsgenetics/gsforge_workflow:latest
 
-#    - stage: test_and_build_docs
-#      script:
-#        - osf -p 6ceuk clone "$GSFORGE_DEMO_DATA"
-#        - pytest --nbsmoke-run examples/**/*.ipynb
-#        - nbsite_generate_modules.py GSForge -d ./doc/Reference_Manual -n GSForge
-#        - nbsite generate-rst --org SystemsGenetics --project-name GSForge
-#        - nbsite build --what=html --output=builtdocs
-#      deploy:
-#        - provider: pages
-#          skip_cleanup: true
-#          local_dir: ./builtdocs
-#          target_branch: gh-pages
-#          github_token: $GITHUB_TOKEN
-#          on:
-#            branch: master
+    - stage: test_and_build_docs
+      script:
+        - osf -p t3xpw clone "$GSFORGE_DEMO_DATA"
+        - pytest --nbsmoke-run examples/**/*.ipynb
+        - nbsite_generate_modules.py GSForge -d ./doc/Reference_Manual -n GSForge
+        - nbsite generate-rst --org SystemsGenetics --project-name GSForge
+        - nbsite build --what=html --output=builtdocs
+      deploy:
+        - provider: pages
+          skip_cleanup: true
+          local_dir: ./builtdocs
+          target_branch: gh-pages
+          github_token: $GITHUB_TOKEN
+          on:
+            branch: master
