--- a/.travis.yml
+++ b/.travis.yml
@@ -40,7 +40,7 @@ jobs:
 #        - pytest --nbsmoke-run examples/**/*.ipynb
         - nbsite_generate_modules.py GSForge -d ./doc/Reference_Manual -n GSForge
         - nbsite generate-rst --org SystemsGenetics --project-name GSForge
-#        - nbsite build --what=html --output=builtdocs --skip Boruta*.ipynb
+        - nbsite build --what=html --output=builtdocs --skip [Boruta*.ipynb, user_guide/*.ipynb]
 #      deploy:
 #        - provider: pages
 #          skip_cleanup: true
