updated workflow and docker

--- a/.travis.yml
+++ b/.travis.yml
@@ -38,8 +38,8 @@ jobs:
         - osf -p t3xpw clone "$GSFORGE_DEMO_DATA"
         - pytest --nbsmoke-run examples/user_guide/AnnotatedGEM_from_pandas.ipynb
         - nbsite_generate_modules.py GSForge -d ./doc/Reference_Manual -n GSForge
-        - nbsite generate-rst --org SystemsGenetics --project-name GSForge --skip="[dev/*, Boruta*.ipynb, R_int*/*.ipynb]"
-        - nbsite build --what=html --output=builtdocs
+        - nbsite generate-rst --org SystemsGenetics --project-name GSForge --skip="[dev/*.ipynb, Boruta*.ipynb, R_int*/*.ipynb]"
+#        - nbsite build --what=html --output=builtdocs
 #      deploy:
 #        - provider: pages
 #          skip_cleanup: true
