--- a/.travis.yml
+++ b/.travis.yml
@@ -39,15 +39,15 @@ jobs:
         - pytest --nbsmoke-run examples/user_guide/AnnotatedGEM_from_pandas.ipynb
         - nbsite_generate_modules.py GSForge -d ./doc/Reference_Manual -n GSForge
         - nbsite generate-rst --org SystemsGenetics --project-name GSForge --skip="[dev/*.ipynb, Boruta*.ipynb, R_int*/*.ipynb]"
-#        - nbsite build --what=html --output=builtdocs
-#      deploy:
-#        - provider: pages
-#          skip_cleanup: true
-#          local_dir: ./builtdocs
-#          target_branch: gh-pages
-#          github_token: $GITHUB_TOKEN
-#          on:
-#            branch: master
+        - nbsite build --what=html --output=builtdocs
+      deploy:
+        - provider: pages
+          skip_cleanup: true
+          local_dir: ./builtdocs
+          target_branch: gh-pages
+          github_token: $GITHUB_TOKEN
+          on:
+            branch: master
 
     - stage: build_dockerfiles
       install: skip
