--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,7 @@ jobs:
   include:
     - stage: test_and_build_docs
       script:
-        - osf -p t3xpw clone "$GSFORGE_DEMO_DATA"
+        - osf -p rbhfz clone "$GSFORGE_DEMO_DATA"
         - pytest --nbsmoke-run examples/user_guide/AnnotatedGEM_from_pandas.ipynb
         - nbsite_generate_modules.py GSForge -d ./doc/Reference_Manual -n GSForge
         - nbsite generate-rst --org SystemsGenetics --project-name GSForge --skip="[dev/*.ipynb, Boruta*.ipynb, R_int*/*.ipynb]"
