--- a/.travis.yml
+++ b/.travis.yml
@@ -38,7 +38,7 @@ jobs:
         - osf -p rbhfz clone "$GSFORGE_DEMO_DATA"
         - pytest --nbsmoke-run examples/user_guide/AnnotatedGEM_from_pandas.ipynb
         - nbsite_generate_modules.py GSForge -d ./doc/Reference_Manual -n GSForge
-        - nbsite generate-rst --org SystemsGenetics --project-name GSForge --skip="[dev/*.ipynb, *Boruta*.ipynb, R_integration_guide/*.ipynb]"
+        - nbsite generate-rst --org SystemsGenetics --project-name GSForge --skip="[^.*dev/*.ipynb, ^.*Boruta*.ipynb, ^.*R_integration_guide/*.ipynb]"
         - nbsite build --what=html --output=builtdocs
       deploy:
         - provider: pages
