--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@
 branches:
   only:
     - master
+    - dev
 
 addons:
   apt:
@@ -21,35 +22,33 @@ services:
   - docker
 
 python:
-  - "3.7"
+  - "3.8"
 
 
 stages:
   - test_and_build_docs
-  - build_dockerfiles
-  # Upload to the pypi development repository. eg 1.a1
-  - name: pip_dev_package
-    if: tag =~ ^v(\d+|\.)+[a-z]\d+$
+
   # Deploy to the real pypi repository. eg 1.1
   - name: pip_package
     if: tag =~ ^v(\d+|\.)+[^a-z]\d+$
-  # For possible future use. This may require a separate development repository.
-#  - name: website_dev
-#    if: tag =~ ^v(\d+|\.)+[a-z]\d+$ OR tag = website_dev
+  - name: build_dockerfiles
+    if: tag =~ ^v(\d+|\.)+[^a-z]\d+$
+
+  # Upload to the pypi development repository. eg 1.a1
+  - name: pip_dev_package
+    if: tag =~ ^v(\d+|\.)+[a-z]\d+$
+  - name: website_dev
+    if: tag =~ ^v(\d+|\.)+[a-z]\d+$ OR tag = website_dev
   - name: website_release
     if: tag =~ ^v(\d+|\.)+[^a-z]\d+$ OR tag = website
 
 
-install:
-  - sudo apt-get install graphviz
-  - pip install -r requirements.txt
-  - pip install -r doc/requirements.txt
-  - pip install .
-  - pip install osfclient
+
 
 jobs:
   include:
-    - stage: test_and_build_docs
+
+    - stage: website_release
       script:
         - osf -p rbhfz clone "$GSFORGE_DEMO_DATA"
         - nbsite_generate_modules.py GSForge -d ./doc/Reference_Manual -n GSForge
@@ -63,6 +62,23 @@ jobs:
           github_token: $GITHUB_TOKEN
           on:
             branch: master
+
+    - stage: website_dev
+      script:
+        - osf -p rbhfz clone "$GSFORGE_DEMO_DATA"
+        - nbsite_generate_modules.py GSForge -d ./doc/Reference_Manual -n GSForge
+        - nbsite generate-rst --org SystemsGenetics --project-name GSForge
+        - nbsite build --what=html --output=builtdocs
+      deploy:
+        - provider: pages
+          skip_cleanup: true
+          local_dir: ./builtdocs
+          target_branch: gh-pages
+          github_token: $GITHUB_TOKEN
+          repo: SystemsGenetics/GSForgeDev
+          on:
+            tags: true
+            all_branches: true
 
     - stage: build_dockerfiles
       install: skip
